k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  defaultBackend:
    service:
      name: myfrontend-clusterip
      port:
        number: 80
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  myfrontend-clusterip
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name:  mybackendlb-clusterip
              port:
                number: 5000
