k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-ingress
spec:
  defaultBackend:
    service:
      name: pokemon-client-service
      port:
        number: 80
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pokemon-client-service
              port:
                number: 80
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name:  pokemon-api-service
              port:
                number: 8000
